--- a/CovidKeeperFrontend/App.xaml
+++ b/CovidKeeperFrontend/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CovidKeeperFrontend"
-             StartupUri="MainWindow.xaml" Startup="Application_Startup">
+             StartupUri="MainWindowTemp.xaml" Startup="Application_Startup">
     <Application.Resources>        
         <ResourceDictionary>
             <Style x:Key="RoundButtonTemplate" TargetType="Button">
@@ -20,6 +20,16 @@
                     </Setter.Value>
                 </Setter>
             </Style>
+            <ControlTemplate x:Key="errorTemplate">
+                <Border BorderBrush="OrangeRed" BorderThickness="2">
+                    <Grid>
+                        <AdornedElementPlaceholder/>
+                        <TextBlock Text="{Binding [0].ErrorContent}" Foreground="OrangeRed"
+                               VerticalAlignment="Center" HorizontalAlignment="Right"
+                               Margin="0,0,4,0"/>
+                    </Grid>
+                </Border>
+            </ControlTemplate>
             <ResourceDictionary.MergedDictionaries>                
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml"/>
