--- a/CovidKeeperFrontend/Views/ManageWorkersUserControl.xaml
+++ b/CovidKeeperFrontend/Views/ManageWorkersUserControl.xaml
@@ -103,7 +103,82 @@
                 </StackPanel>
             </Grid>
         </materialDesign:DialogHost>
-        <Grid Height="450">
+        <materialDesign:DialogHost BorderBrush="{DynamicResource MaterialDesignDivider}">
+            <materialDesign:DialogHost.DialogContent>
+                <Grid Width="600" Height="330" VerticalAlignment="Top" HorizontalAlignment="Center">
+
+                    <StackPanel Orientation="Vertical" Margin="15">
+                        <StackPanel Orientation="Horizontal" Margin="15">
+                            <materialDesign:PackIcon Kind="PeopleAdd" Foreground="{StaticResource PrimaryHueMidBrush}" Width="50" Height="50"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <StackPanel Orientation="Vertical" Margin="15, 0, 0, 0" Width="150">
+                                <Label Content="ID:" Foreground="Gray" FontFamily="Champagne &amp; Limousines" FontSize="18" Height="30"/>
+                                <Label Content="FULL NAME:" Foreground="Gray" FontFamily="Champagne &amp; Limousines" FontSize="18" Height="30"/>
+                                <Label Content="EMAIL ADDRESS:" Foreground="Gray" FontFamily="Champagne &amp; Limousines" FontSize="18" Height="30"/>
+                            </StackPanel>
+                            <StackPanel Orientation="Vertical" Margin="15, 0, 0, 0" Width="370">
+                                <TextBox x:Name="IdWorkerUpdate" materialDesign:HintAssist.Hint="ID" Foreground="Gray" 
+                                         FontFamily="Champagne &amp; Limousines" Height="30" 
+                                         FontSize="18" Margin="15, 0, 0, 0" TextChanged="IdWorkerUpdate_TextChanged"
+                                         Validation.ErrorTemplate="{StaticResource errorTemplate}">
+                                    <TextBox.Text>
+                                        <Binding Path="IdWorkerUpdateRuleProperty" ValidatesOnDataErrors="True" UpdateSourceTrigger="PropertyChanged">
+                                            <Binding.ValidationRules>
+                                                <DetalisRules:IdRules MinimumDigits="5"/>
+                                            </Binding.ValidationRules>
+                                        </Binding>
+                                    </TextBox.Text>
+                                </TextBox>
+                                <TextBox x:Name="FullNameUpdate" materialDesign:HintAssist.Hint="FULL NAME" Foreground="Gray" 
+                                         FontFamily="Champagne &amp; Limousines" FontSize="18" 
+                                         Height="30" Margin="15, 0, 0, 0" TextChanged="FullNameUpdate_TextChanged"
+                                         Validation.ErrorTemplate="{StaticResource errorTemplate}">
+                                    <TextBox.Text>
+                                        <Binding Path="FullNameUpdateRuleProperty" ValidatesOnDataErrors="True" UpdateSourceTrigger="PropertyChanged">
+                                            <Binding.ValidationRules>
+                                                <DetalisRules:FullNameRules MinimumCharactersForEachWord="2"/>
+                                            </Binding.ValidationRules>
+                                        </Binding>
+                                    </TextBox.Text>
+                                </TextBox>
+                                <TextBox x:Name="EmailAddressUpdate" materialDesign:HintAssist.Hint="EMAIL ADDRESS" Foreground="Gray" 
+                                         FontFamily="Champagne &amp; Limousines" FontSize="18" 
+                                         Height="30" Margin="15, 0, 0, 0" TextChanged="EmailAddressUpdate_TextChanged"
+                                         Validation.ErrorTemplate="{StaticResource errorTemplate}">
+                                    <TextBox.Text>
+                                        <Binding Path="EmailAddressUpdateRuleProperty" ValidatesOnDataErrors="True" UpdateSourceTrigger="PropertyChanged">
+                                            <Binding.ValidationRules>
+                                                <DetalisRules:EmailAddressRules/>
+                                            </Binding.ValidationRules>
+                                        </Binding>
+                                    </TextBox.Text>
+                                </TextBox>
+                            </StackPanel>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="15, 0, 0, 0">
+                            <Label Content="ADD IMAGE" Foreground="Gray" FontFamily="Champagne &amp; Limousines" FontSize="18" Height="30" />
+                            <Button x:Name="LoadButtonUpdate" Width="30" Height="30" Padding="0" Click="LoadButton_Click"
+                            Background="{x:Null}" BorderBrush="{x:Null}" Foreground="Gray" Margin="15, 0, 0, 0">
+                                <materialDesign:PackIcon Kind="AttachFile"/>
+                            </Button>
+                            <Image x:Name="ImageWorkerUpdate" Stretch="Fill" Width="80" Height="80" Margin="15, 0, 0, 0"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">
+                            <Button x:Name="SaveUpdateButton" Margin="4" Style="{DynamicResource MaterialDesignFlatButton}"
+                                    VerticalAlignment="Center" Click="SaveUpdateButton_Click">
+                                Add
+                            </Button>
+                            <Button x:Name="CancelSaveUpdateButton"  
+                                    Style="{DynamicResource MaterialDesignFlatButton}" Margin="4" 
+                                    VerticalAlignment="Center" Click="CancelSaveUpdateButton_Click">
+                                Cancel
+                            </Button>
+                        </StackPanel>
+                    </StackPanel>
+                </Grid>
+            </materialDesign:DialogHost.DialogContent>
+            <Grid Height="450">
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition Height="415"/>
@@ -117,9 +192,9 @@
             <Grid Grid.Row="1" Grid.ColumnSpan="3">
                 <ScrollViewer Margin="0,0,0,30">
                     <DataGrid x:Name="WorkerDetailsTable" ItemsSource="{Binding Path=VM_WorkerDetailsTableProperty, Mode=OneWay}" 
-                              HorizontalAlignment="Left" AutoGenerateColumns="False" 
-                              CurrentCellChanged="WorkerDetailsTable_CurrentCellChanged" RowDetailsVisibilityMode="Collapsed"
-                              SelectionChanged="WorkerDetailsTable_SelectionChanged" CanUserDeleteRows="True" CanUserAddRows="False">
+                              HorizontalAlignment="Left" AutoGenerateColumns="False"
+                              RowDetailsVisibilityMode="Collapsed" IsReadOnly="True"
+                              CanUserDeleteRows="False" CanUserAddRows="False">
                         <DataGrid.Columns>
                             <DataGridTemplateColumn>
                                 <DataGridTemplateColumn.CellTemplate>
@@ -131,7 +206,17 @@
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <DataGridTemplateColumn>
+                                <DataGridTemplateColumn>
+                                    <DataGridTemplateColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <Button x:Name="EditButton" Click="EditButton_Click"  Width="30" Height="30" Padding="0" 
+                                                Background="{x:Null}" BorderBrush="{x:Null}" Foreground="Gray" Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}">
+                                                <materialDesign:PackIcon Kind="Edit"/>
+                                            </Button>
+                                        </DataTemplate>
+                                    </DataGridTemplateColumn.CellTemplate>
+                                </DataGridTemplateColumn>
+                                <DataGridTemplateColumn>
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <Button x:Name="DetailsButton" ButtonBase.Click="DetailsButton_Click" 
@@ -158,24 +243,24 @@
                             <DataTemplate>
                                 <DockPanel>
                                     <Image Source="{Binding Path=Image}" Width="90"/>
-                                    <Grid Margin="20, 20">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="100"/>
-                                            <ColumnDefinition Width="Auto"/>
-                                        </Grid.ColumnDefinitions>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                        </Grid.RowDefinitions>
-                                        <TextBlock Text="Id: " FontWeight="Bold"/>
-                                        <TextBlock Text="{Binding Path=Id}" Grid.Column="1" Grid.Row="0"/>
-                                        <TextBlock Text="Full Name: " FontWeight="Bold" Grid.Row="1" Grid.Column="0"/>
-                                        <TextBlock Text="{Binding Path=FullName}" Grid.Column="1" Grid.Row="1"/>
-                                        <TextBlock Text="Email address: " FontWeight="Bold" Grid.Row="2" Grid.Column="0"/>
-                                        <TextBlock Text="{Binding Path=Email_address}" Grid.Column="1" Grid.Row="2"/>
-                                    </Grid>
-                                </DockPanel>
+                                        <Grid Margin="20, 20">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="100"/>
+                                                <ColumnDefinition Width="Auto"/>
+                                            </Grid.ColumnDefinitions>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                            </Grid.RowDefinitions>
+                                            <TextBlock Text="Id: " FontWeight="Bold"/>
+                                            <TextBlock Text="{Binding Path=Id}" Grid.Column="1" Grid.Row="0"/>
+                                            <TextBlock Text="Full Name: " FontWeight="Bold" Grid.Row="1" Grid.Column="0"/>
+                                            <TextBlock Text="{Binding Path=FullName}" Grid.Column="1" Grid.Row="1"/>
+                                            <TextBlock Text="Email address: " FontWeight="Bold" Grid.Row="2" Grid.Column="0"/>
+                                            <TextBlock Text="{Binding Path=Email_address}" Grid.Column="1" Grid.Row="2"/>
+                                        </Grid>
+                                    </DockPanel>
                             </DataTemplate>
                         </DataGrid.RowDetailsTemplate>
                     </DataGrid>
@@ -184,8 +269,9 @@
                     <TextBlock Text="{Binding Path=VM_CountWorkersInWorkersDetailsTableProperty, StringFormat='Total Workers: {0}'}"
                               Foreground="Gray" FontFamily="Champagne &amp; Limousines" FontSize="18" Height="30" FontWeight="Bold" />
                 </StackPanel>
-            </Grid>
+            </Grid>            
         </Grid>
+        </materialDesign:DialogHost>
 
     </Grid>
 </UserControl>
