--- a/CovidKeeperFrontend/Views/HomeUserControl.xaml
+++ b/CovidKeeperFrontend/Views/HomeUserControl.xaml
@@ -35,10 +35,12 @@
                     </Grid>
 
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10 20">
-                        <TextBlock x:Name="WorkersWithoutMaskText" Text="{Binding Path=VM_HowManyWorkersWithoutMaskProperty, Mode=OneWay}" FontFamily="Champagne &amp; Limousines" VerticalAlignment="Center" Foreground="Gray" FontSize="50"/>
+                        <TextBlock x:Name="WorkersWithoutMaskText" Text="{Binding Path=VM_HowManyWorkersWithoutMaskTodayProperty, Mode=OneWay}" 
+                                   FontFamily="Champagne &amp; Limousines" VerticalAlignment="Center" Foreground="Gray" FontSize="50"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="15, 20" >
-                        <TextBlock Text="Workers Without Mask Today" FontSize="12" HorizontalAlignment="Right" FontFamily="Champagne &amp; Limousines" Margin="5" VerticalAlignment="Top" Foreground="Gray"/>
+                        <TextBlock Text="Workers Without Mask Today" FontSize="12" HorizontalAlignment="Right" FontFamily="Champagne &amp; Limousines" 
+                                   Margin="5" VerticalAlignment="Top" Foreground="Gray"/>
                     </StackPanel>
                 </Grid>
             </Grid>
