--- a/CovidKeeperFrontend/Views/HomeUserControl.xaml
+++ b/CovidKeeperFrontend/Views/HomeUserControl.xaml
@@ -11,16 +11,16 @@
         <materialDesign:TransitioningContent x:Name="TransitioningContentSlide" OpeningEffect="{materialDesign:TransitionEffect Kind=SlideInFromLeft}"/>
         <Grid Height="450">
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition Height="200"/>
+                <RowDefinition Height="60"/>
+                <RowDefinition Height="160"/>
+                <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
-            <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,0,261.4,5.8">
+            <Grid Grid.Row="1" Grid.Column="0" >
                 <Rectangle Height="120" Margin="20" Fill="White" RadiusY="10" RadiusX="10">
                     <Rectangle.Effect>
                         <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" RenderingBias="Quality" ShadowDepth="1"/>
@@ -44,7 +44,7 @@
                     </StackPanel>
                 </Grid>
             </Grid>
-            <Grid Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,0,261.4,5.8">
+            <Grid Grid.Row="1" Grid.Column="1">
                 <Rectangle Height="120" Margin="20" Fill="White" RadiusY="10" RadiusX="10">
                     <Rectangle.Effect>
                         <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" RenderingBias="Quality" ShadowDepth="1"/>
@@ -68,7 +68,7 @@
                 </Grid>
             </Grid>
 
-            <Grid Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="261.2,0,0.2,5.8">
+            <Grid Grid.Row="1" Grid.Column="2" >
                 <Rectangle Height="120" Margin="20" Fill="White" RadiusY="10" RadiusX="10" >
                     <Rectangle.Effect>
                         <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" RenderingBias="Quality" ShadowDepth="1"/>
@@ -90,12 +90,16 @@
                     </StackPanel>
                 </Grid>
             </Grid>
-            <Grid Grid.Row="1" Grid.Column="1">
+            <Grid Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="3">
+                <Image x:Name="PeopleClickOnButton" Stretch="UniformToFill" Margin="200, 145, 200, 0"
+                         Height="245" />
+            </Grid>
+            <Grid Grid.Row="2" Grid.Column="2">
                 <Grid.Effect>
                     <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" ShadowDepth="1"/>
                 </Grid.Effect>
                 <Button x:Name="ActiveButton" Content="{Binding Path=VM_ActiveButtonContentProperty, Mode=OneWay}" 
-                                HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Height="100"
+                                HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="100" Margin="0, 40"
                                 Click="ActiveButton_Click" Style="{StaticResource RoundButtonTemplate}" FontSize="22" FontWeight="Bold">
                     <Button.Background>
                         <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
@@ -107,7 +111,8 @@
                     </Button.Background>
                 </Button>
             </Grid>
-            <Grid Grid.Row="0" Grid.ColumnSpan="3" VerticalAlignment="Center" Width="650" Height="120" HorizontalAlignment="Center" >
+            
+            <Grid Grid.Row="0" Grid.ColumnSpan="3" VerticalAlignment="Center" Width="650" Height="80" HorizontalAlignment="Center" >
                 <TextBlock Text="Welcome to Covid Keeper" Foreground="DarkBlue" FontSize="50" HorizontalAlignment="Center" VerticalAlignment="Top" FontFamily="Yu Gothic UI Semibold"/>
             </Grid>
         </Grid>
