--- a/CovidKeeperFrontend/Views/ManageWorkersUserControl.xaml
+++ b/CovidKeeperFrontend/Views/ManageWorkersUserControl.xaml
@@ -10,7 +10,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <materialDesign:TransitioningContent x:Name="TransitioningContentSlide" OpeningEffect="{materialDesign:TransitionEffect SlideInFromLeft, Duration=0:0:0.8}"/>
-        <materialDesign:DialogHost BorderBrush="{DynamicResource MaterialDesignDivider}">
+        <materialDesign:DialogHost BorderBrush="{DynamicResource MaterialDesignDivider}" x:Name="AddDialogHost">
             <materialDesign:DialogHost.DialogContent>
                 <Grid Width="600" Height="330" VerticalAlignment="Top" HorizontalAlignment="Center">
 
@@ -103,7 +103,7 @@
                 </StackPanel>
             </Grid>
         </materialDesign:DialogHost>
-        <materialDesign:DialogHost BorderBrush="{DynamicResource MaterialDesignDivider}">
+        <materialDesign:DialogHost BorderBrush="{DynamicResource MaterialDesignDivider}" x:Name="UpdateDialogHost">
             <materialDesign:DialogHost.DialogContent>
                 <Grid Width="600" Height="330" VerticalAlignment="Top" HorizontalAlignment="Center">
 
