--- a/CovidKeeperFrontend/Views/ManageWorkersUserControl.xaml
+++ b/CovidKeeperFrontend/Views/ManageWorkersUserControl.xaml
@@ -158,7 +158,7 @@
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="15, 0, 0, 0">
                             <Label Content="ADD IMAGE" Foreground="Gray" FontFamily="Champagne &amp; Limousines" FontSize="18" Height="30" />
-                            <Button x:Name="LoadButtonUpdate" Width="30" Height="30" Padding="0" Click="LoadButton_Click"
+                            <Button x:Name="LoadButtonUpdate" Width="30" Height="30" Padding="0" Click="LoadButtonUpdate_Click"
                             Background="{x:Null}" BorderBrush="{x:Null}" Foreground="Gray" Margin="15, 0, 0, 0">
                                 <materialDesign:PackIcon Kind="AttachFile"/>
                             </Button>
